# samuel

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
Pink-Trombone/: AGENTS.md  index-debug.html  index.html  pink-trombone-worklet-processor.min.js  pink-trombone.min.js
configs/: config.yaml  model.yaml  rl_train.yaml
notebooks/: 0425_per_frame_fit.ipynb  0425_tract_fit.ipynb  0425_tract_fit_constrained.ipynb  0718_rl.ipynb  glottis_demo.ipynb  tract_demo.ipynb  tract_fit.ipynb  tract_iir_demo.ipynb  tract_iir_eig_demo.ipynb
scripts/: benchmark_step.py  benchmark_synth.py  diagnose_encoder.py  diagnose_encoder_fixes.py  diagnose_grad.py  diagnose_loss.py  diagnose_variance.py  enhance_librilight.py  precompute_pitch.py  precompute_pitch_parallel.py  run_batch_sweep.sh  run_matrix.sh  subsample_librilight.py  sweep_orchestrator.sh  sweep_orchestrator2.sh  sweep_pitch_caches.sh  sweep_spf1024.sh  sweep_spf2048.sh  sweep_spf512.sh
src/samuel/: __init__.py  config.py  data.py  encoder.py  losses.py  model.py  pink_trombone.py  rl_train.py  server.py  ssl_loss.py  train.py  whisper_distill.py
src/samuel/evals/: __init__.py  asr.py  pitch.py
tests/: test_asr_scoring.py  test_data.py  test_encoder.py  test_model.py  test_pink_trombone.py
webapp/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/lib/: audio.ts  usePinkTrombone.ts
webapp/scripts/: vendor-pink-trombone.sh
webapp/types/: pink-trombone.d.ts
(+4 files in other folders)
