[project]
name = "samuel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Václav Volhejn", email = "vaclav.volhejn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3",
    "julius>=0.2.7",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "pydantic>=2.0",
    "scipy>=1.17.1",
    "soundfile>=0.12",
    "torch==2.8.*",
    "tqdm>=4.67.3",
    "transformers>=5.6.2",
    "wandb>=0.18",
]

[project.scripts]
samuel = "samuel:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "foo/foop",
]
